@@ -25,6 +25,11 @@ GPU-RAM-NIC transfers are handled efficiently by StarPU-MPI.  The user has to
 use the usual <c>mpirun</c> command of the MPI implementation to start StarPU on
 the different MPI nodes.
 
+In case the user wants to run several MPI processes by machine (e.g. one per
+NUMA node), \ref STARPU_WORKERS_GETBIND should be used to make StarPU take into
+account the binding set by the MPI launcher (otherwise each StarPU instance
+would try to bind on all cores of the machine...)
+
 An MPI Insert Task function provides an even more seamless transition to a
 distributed application, by automatically issuing all required data transfers
 according to the task graph and an application-provided distribution.
