@@ -184,6 +184,16 @@ Setting it to non-zero will prevent StarPU from binding its threads to
 CPUs. This is for instance useful when running the testsuite in parallel.
 </dd>
 
+<dt>STARPU_WORKERS_GETBIND</dt>
+<dd>
+\anchor STARPU_WORKERS_GETBIND
+\addindex __env__STARPU_WORKERS_GETBIND
+Setting it to non-zero makes StarPU use the OS-provided CPU binding to determine
+how many and which CPU cores it should use. This is notably useful when running
+several StarPU-MPI processes on the same host, to let the MPI launcher set the
+CPUs to be used.
+</dd>
+
 <dt>STARPU_WORKERS_CPUID</dt>
 <dd>
 \anchor STARPU_WORKERS_CPUID
